security: implement k8s secrets template and remove hardcoded credentials
Added `k8s/secrets/secrets-template.yml` for secure, declarative secret management in Kubernetes (Postgres, JWT, Stripe).
Refactored `PaymentController` to inject Stripe webhook secret via `@Value` instead of hardcoded string.
Updated `JwtTokenProviderTest` to use static test fixtures for secrets.
Configured dynamic CORS in `SecurityConfig` to allow origins via environment variables.
Updated `.gitignore` to prevent accidental commit of real secret files.